--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,6 @@
 html, body{
 height: 100%;
 width: 100%;
-padding: 0.5em;
 background-color: rgb(255, 255, 255);
 }
 /* NAVBAR */
@@ -20,6 +19,10 @@ display: flex;
 width: 100%;
 height: 45px;
 justify-content: space-between;
+align-items: center;
+padding: 1em;
+background-color: rgb(217, 222, 226);
+border-bottom: 5px solid black;
 }
 
 /* NAVBAR */
@@ -30,6 +33,11 @@ justify-content: space-between;
     flex-wrap: wrap;
     gap: 1em;
     width: 100%;
+    padding: 1em;
+}
+.userList{
+    text-align: center;
+    margin: 0.4em 0 0 0;
 }
 .userCard{
     display: flex;
@@ -40,10 +48,11 @@ justify-content: center;
     background-color: rgb(217, 222, 226);
     padding: 1em;
     border-radius: 1em;
+    box-shadow: 0.3em 0.3em 0 0 black;
 }
 .userLeft{
     display: flex;
-
+    flex-direction: column;
 gap: 1em;
 }
 .userName{
@@ -55,15 +64,39 @@ text-align: center;
 
 }
 .userButton{
-    background: rgb(54, 54, 54);
+    background: rgb(0, 0, 0);
     color:rgb(217, 222, 226);
     border-radius: 0.5em;
+    border: none;
     width: 100px;
-    padding: 0.1em;
+    padding: 0.5em 1em 0.5em 1em;
     cursor: pointer;
 }
 .userAvatar{
 border-radius: 50%;
 }
-
+.userDetailContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1em;
+    height: 90%;
+}
+.userDetail{
+    background-color: rgb(217, 222, 226);
+    padding: 3em;
+    border-radius: 1em;
+    display: flex;
+    width: 70%;
+    height: 50%;
+    box-shadow: 0.7em 0.7em 0 0 black;
+}
+.userDetailContainer div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
 /*  USER  */
