--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,16 @@ height: 100%;
 width: 100%;
 background-color: rgb(255, 255, 255);
 }
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 /* NAVBAR */
 .navigationBar{
 display: flex;
@@ -22,7 +32,6 @@ justify-content: space-between;
 align-items: center;
 padding: 1em;
 background-color: rgb(217, 222, 226);
-border-bottom: 5px solid black;
 }
 
 /* NAVBAR */
@@ -37,7 +46,6 @@ border-bottom: 5px solid black;
 }
 .userList{
     text-align: center;
-    margin: 0.4em 0 0 0;
 }
 .userCard{
     display: flex;
@@ -48,7 +56,12 @@ justify-content: center;
     background-color: rgb(217, 222, 226);
     padding: 1em;
     border-radius: 1em;
-    box-shadow: 0.3em 0.3em 0 0 black;
+    box-shadow: 0em 0.2em 0.5em 0 black;
+    transition:1s;
+}
+.userCard:hover{
+    transform: translateY(-0.3em);
+    transition:1s;
 }
 .userLeft{
     display: flex;
@@ -90,7 +103,7 @@ border-radius: 50%;
     display: flex;
     width: 70%;
     height: 50%;
-    box-shadow: 0.7em 0.7em 0 0 black;
+    box-shadow: 0.3em 0.3em 0.5em 0 black;
 }
 .userDetailContainer div{
     display: flex;
@@ -100,3 +113,15 @@ border-radius: 50%;
     
 }
 /*  USER  */
+
+/* FOOTER */
+.footer{
+    display: flex;
+    width: 100%;
+    height: 45px;
+    justify-content: center;
+    align-items: center;
+    padding: 1em;
+    background-color: rgb(217, 222, 226);
+}
+/* FOOTER */
