keyframme appear added

--- a/app/globals.css
+++ b/app/globals.css
@@ -104,6 +104,11 @@ border-radius: 50%;
     width: 70%;
     height: 50%;
     box-shadow: 0.3em 0.3em 0.5em 0 black;
+    animation: appear 1s both;
+}
+@keyframes appear {
+    0%{transform: scale(0);}
+    100%{transform: scale(1);}
 }
 .userDetailContainer div{
     display: flex;
