--- a/app/globals.css
+++ b/app/globals.css
@@ -31,9 +31,11 @@ height: 45px;
 justify-content: space-between;
 align-items: center;
 padding: 1em;
-background-color: rgb(217, 222, 226);
+background-color: rgb(52, 68, 82);
 }
-
+.navigationBar li a{
+    color: white;
+}
 /* NAVBAR */
 
 /*  USER  */
@@ -43,6 +45,13 @@ background-color: rgb(217, 222, 226);
     gap: 1em;
     width: 100%;
     padding: 1em;
+}
+.userListContainer{
+    display: flex;
+    flex-direction: column;
+gap: 1em;
+    height: 90%;
+    align-items: center;
 }
 .userList{
     text-align: center;
@@ -56,7 +65,7 @@ justify-content: center;
     background-color: rgb(217, 222, 226);
     padding: 1em;
     border-radius: 1em;
-    box-shadow: 0em 0.2em 0.5em 0 black;
+    box-shadow: 0em 0.1em 0.3em 0 black;
     transition:1s;
 }
 .userCard:hover{
@@ -74,10 +83,21 @@ text-align: center;
 }
 .userEmail{
     text-align: center;
-
+}
+.userCreateBtn{
+    padding: 1em;
+    border: none;
+    background-color: rgb(52, 68, 82);
+    border-radius: 0.5em;
+    font-size: 20px;
+    color: white;
+    font-family: sans-serif;
+    cursor: pointer;
+    margin-top:1em;
 }
 .userButton{
-    background: rgb(0, 0, 0);
+    background-color: rgb(52, 68, 82);
+
     color:rgb(217, 222, 226);
     border-radius: 0.5em;
     border: none;
@@ -129,6 +149,7 @@ border-radius: 50%;
     justify-content: center;
     align-items: center;
     padding: 1em;
-    background-color: rgb(217, 222, 226);
+    background-color: rgb(52, 68, 82);
+color:white;
 }
 /* FOOTER */
